--- a/index.html
+++ b/index.html
@@ -7,6 +7,174 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <section class="banner-section">
+        <div class="banner-ditels">
+            <img src="./assets/Group.png" alt="">
+            <h1>"In the near future, I hope to <br>become a Developer."</h1>
+            <p>"CodeByMasum turns imagination into interactive digital experiences.
+                With clean code and creative design, <br>I build smart web solutions.
+                Focused on simplicity, speed, and user satisfaction."</p>
+                <button>Contact with me</button>
+        </div>
+    </section>
+    <!-- End of the banner setcion -->
+     <!-- stard on the development section -->
+    <section class="development-continer">
+        <div class="development-detiles-header">
+            <h1>Why Web Development??</h1>
+            <h2>Web development lets me turn ideas into real, usable digital solutions.<br>
+                I love creating experiences that solve problems and connect people.</h2>
+        </div>
+        <div class="development-detiles">
+            <div class="development-detile-father">
+                <div class="development-detiles-child">
+                    <h1>I will Do Coding and <br>Change The World</h1>
+                    <p>"I believe in the power of code to solve real-world problems and inspire innovation. <br>
+                        With every line I write, I'm one step closer to making a meaningful impact."</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="development-detiles-child">
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="development-detiles">
+            <div class="development-detile-mother">
+                <div class="development-detiles-child">
+                    <img src="./assets/Group 3.png" alt="">
+                </div>
+                <div class="development-detiles-child">
+                    <h1>I will help People by <br>creating Modern Web System</h1>
+                    <p>Building smart, efficient web solutions to solve real problems.<br>
+                    Empowering people through technology and innovation.</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="development-detiles">
+            <div class="development-detile-father">
+                <div class="development-detiles-child">
+                    <h1>I will Do Coding and Change The World</h1>
+                    <p>Solving real-world challenges through clean and creative code.<br>
+                        Every project is a step toward a smarter, better future.</p>
+                        <button>Learn More</button>
+                </div>
+                <div class="development-detiles-child">
+                    <img src="./assets/Group 4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- stard video section -->
+     <section class="video-continer">
+        <div class="video-continer-child">
+            <h1>My Inspiration</h1>
+            <p>The journey that fuels my passion and motivates me every single day.<br>
+                It reminds me that growth begins where comfort ends.</p>
+        </div>
+        <div class="video-continer-child">
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/usHNf06o-hM" title="কোডিং কঠিন আর কনটেন্ট ক্রিয়েশন সহজ? Coding Hard VS Content creation easy @ATCAndroidToToCompany" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+     </section>
+     <!-- stard of the target section -->
+      <section class="target">
+        <div class="target-continer">
+            <div class="target-continer-child">
+                <h1>My Current Target</h1>
+                <p>Sharpening my skills and building real-world web projects.<br>
+                    Focused on learning, growing, and creating meaningful impact.</p>
+            </div>
+            <div class="target-continer-childs">
+                <div class="target-continer-child-cards boy">
+                    <img src="./assets/html.png" alt="">
+                    <h1>HTML</h1>
+                    <p>The foundation of every webpage, shaping structure and content.<br>
+                        Building blocks of the web — clean, semantic, and essential.</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="target-continer-child-cardss boy">
+                    <img src="./assets/css.png" alt="">
+                    <h1>Css</h1>
+                    <p>Makes a webpage stylish, beautiful, and attractive.<br>
+                        Shapes the visual experience by controlling colors, fonts, and layout.</p>
+                        <button>Learn More</button>
+                </div>
+                <div class="target-continer-child-cardsss boy">
+                    <img src="./assets/js.png" alt="">
+                    <h1>JavaScript</h1>
+                    <p>Brings life and interactivity to websites.<br>
+                        Handles logic, events, and dynamic content with power and precision.</p> <br>
+                        <button>Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="target-continers">
+            <div class="target-continer-child">
+                <h1>My Next Target</h1>
+                <p>Aiming to master advanced web technologies and real-world projects.<br>
+                    Step by step, moving closer to becoming a full-stack developer.</p>
+            </div>
+            <div class="target-continer-child">
+                <div class="target-continer-childs chill">
+                    <div class="target-continer-childs-box">
+                        <img src="./assets/react.png" alt="">
+                    </div>
+                    <div class="target-continer-childs-box">
+                        <h1>ReactJS</h1>
+                        <p>A powerful JavaScript library for building dynamic user interfaces.
+                            Makes web apps faster, scalable, and more interactive with component-based architecture</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="target-continer-childs chill">
+                    <div class="target-continer-childs-box">
+                        <img src="./assets/nodejs.png" alt="">
+                    </div>
+                    <div class="target-continer-childs-box">
+                        <h1>NodeJs</h1>
+                        <p>Node.js lets JavaScript run on the server, enabling scalable and high-performance applications.
+                            Perfect for building real-time and data-intensive solutions with speed and efficiency.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="target-continer-childs chill">
+                    <div class="target-continer-childs-box">
+                        <img src="./assets/mongodb.png" alt="">
+                    </div>
+                    <div class="target-continer-childs-box">
+                        <h1>MongoDB</h1>
+                        <p>A flexible, document-based NoSQL database built for speed and scalability.
+                            Stores data in JSON-like format, ideal for modern web and mobile applications.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- suport section -->
+       <section class="suport">
+            <div class="suport-continer">
+                <h1>I need Support</h1>
+                <p>Every journey has its challenges — I'm open to guidance and encouragement.<br>
+                    With the right support, I can grow, learn, and move forward stronger.</p>
+            </div>
+            <div class="suport-continer">
+                <input type="text" class="sst" placeholder="Suggest me any feedback for me">
+                <input type="submit" class="sss" placeholder="Submit">
+            </div>
+       </section>
+
+       <!-- footer section -->
+       <!-- media section -->
+        <section class="media">
+            <div class="media-ditels">
+                <h1>An Open Commitment by CodeByMasum</h1>
+            </div>
+            <div class="media-ditels">
+                <img src="./assets/facebook.png" alt="">
+                <img id="ddsst" src="./assets/github.png" alt="">
+                <img src="./assets/linkedin-icon 1.png" alt="">
+            </div>
+        </section>
 </body>
 </html>
