march banner to support section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>"CodeByMasum turns imagination into interactive digital experiences.
                 With clean code and creative design, <br>I build smart web solutions.
                 Focused on simplicity, speed, and user satisfaction."</p>
-                <button>Contact with me</button>
+                <a href="#fffff"><button>Contact with me</button></a>
         </div>
     </section>
     <!-- End of the banner setcion -->
@@ -152,7 +152,7 @@
         </div>
       </section>
       <!-- suport section -->
-       <section class="suport">
+       <section id="fffff" class="suport">
             <div class="suport-continer">
                 <h1>I need Support</h1>
                 <p>Every journey has its challenges — I'm open to guidance and encouragement.<br>
@@ -171,9 +171,9 @@
                 <h1>An Open Commitment by CodeByMasum</h1>
             </div>
             <div class="media-ditels">
-                <img src="./assets/facebook.png" alt="">
-                <img id="ddsst" src="./assets/github.png" alt="">
-                <img src="./assets/linkedin-icon 1.png" alt="">
+                <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
+                <a href="https://github.com/"><img id="ddsst" src="./assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="./assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </section>
 </body>
